--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,8 @@ lib-cov
 coverage
 *.lcov
 
+
+
 # nyc test coverage
 .nyc_output
 
@@ -102,3 +104,5 @@ dist
 
 # TernJS port file
 .tern-port
+package-lock.json
+package-lock.json
